@@ -94,6 +94,15 @@
         * TestWebKitAPI/Tests/WebCore/MarkedText.cpp:
         (TestWebKitAPI::TEST):
 
+2021-06-09  Ryan Haddad  <ryanhaddad@apple.com>
+
+        [test-webkit-lldb] 3 dump_class_layout_unittest.TestDumpClassLayout tests failing with Xcode 12.5
+        https://bugs.webkit.org/show_bug.cgi?id=226540
+
+        Unreviewed test gardening.
+
+        * lldb/dump_class_layout_unittest.py: Rebaseline tests.
+
 2021-06-08  Sam Weinig  <weinig@apple.com>
 
         Add copy of std::span so that we can use it pre-moving to c++20
